--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
@@ -100,4 +100,9 @@
   <ItemGroup>
     <None Include="QGL_Content.UnitTests_TemporaryKey.pfx" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Tests\Test-Files\CheckMe.txt">
+      <Filter>Tests\Test-Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
