--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
@@ -66,22 +66,22 @@
     <ClCompile Include="Tests\File-Helpers\additional_helper_tests.cpp">
       <Filter>Tests\File-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\ContentDataRWTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\valid_data_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\DictMetaRWTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\offset_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\DictRWTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\header_rw_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\HeaderRWTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_rw_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\OffsetTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\dict_meta_rw_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="Tests\Read-Write-Helpers\ValidDataTests.cpp">
+    <ClCompile Include="Tests\Read-Write-Helpers\content_data_rw_tests.cpp">
       <Filter>Tests\Read-Write-Helpers</Filter>
     </ClCompile>
   </ItemGroup>
