--- a/QGL_Content/QGL_Content.vcxproj
+++ b/QGL_Content/QGL_Content.vcxproj
@@ -158,24 +158,24 @@
     <ClInclude Include="include\Content-Buffers\qgl_content_dict_entry_buffer.h" />
     <ClInclude Include="include\Content-Buffers\qgl_content_file_header_buffer.h" />
     <ClInclude Include="include\Content-Buffers\qgl_content_metadata_buffer.h" />
+    <ClInclude Include="include\Content-Dictionary\qgl_content_dictionary.h" />
     <ClInclude Include="include\Content-Files\qgl_content_file.h" />
     <ClInclude Include="include\Content-Files\qgl_content_file_helpers.h" />
-    <ClInclude Include="include\Content-Files\qgl_file_importers.h" />
-    <ClInclude Include="include\Content-Files\qgl_file_loader_content_store_config.h" />
-    <ClInclude Include="include\Content-Files\qgl_file_loader_string.h" />
-    <ClInclude Include="include\Content-Files\qgl_file_loader_wstring.h" />
     <ClInclude Include="include\Content-Importers\qgl_iimporter.h" />
     <ClInclude Include="include\Content-Importers\qgl_importer_string.h" />
     <ClInclude Include="include\Content-Importers\qgl_importer_struct.h" />
     <ClInclude Include="include\Content-Importers\qgl_importer_testers.h" />
     <ClInclude Include="include\Content-Importers\qgl_importer_wstring.h" />
+    <ClInclude Include="include\Content-Project\qgl_content_project.h" />
+    <ClInclude Include="include\Content-Project\qgl_content_project_compiler.h" />
     <ClInclude Include="include\Content-Store\qgl_content_iterator.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store_accessor.h" />
     <ClInclude Include="include\Content-Store\qgl_content_store_config.h" />
-    <ClInclude Include="include\qgl_content_dictionary.h" />
-    <ClInclude Include="include\qgl_content_project.h" />
-    <ClInclude Include="include\qgl_content_project_compiler.h" />
+    <ClInclude Include="include\File-Loaders\qgl_file_loaders.h" />
+    <ClInclude Include="include\File-Loaders\qgl_file_loader_content_store_config.h" />
+    <ClInclude Include="include\File-Loaders\qgl_file_loader_string.h" />
+    <ClInclude Include="include\File-Loaders\qgl_file_loader_wstring.h" />
     <ClInclude Include="include\qgl_content_include.h" />
     <ClInclude Include="include\qgl_content_item.h" />
     <ClInclude Include="include\qgl_content_types.h" />
