--- a/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Content.UnitTests/QGL_Content.UnitTests.vcxproj.filters
@@ -179,5 +179,8 @@
     <Text Include="Tests\Test-Files\CheckMe.txt">
       <Filter>Tests\Test-Files</Filter>
     </Text>
+    <Text Include="StorageFile.txt">
+      <Filter>Tests\Test-Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
